[tool.poetry]
name = "hoopy"
version = "1.1.1"
description = ""
authors = ["Olivia Palmu <hiemankaranteenissa@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = ">=22.8,<25.0"
pytest = "^7.1.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
